--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,10 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   animated_text_kit: ^1.3.0
-  firebase_core: ^1.0.2
-  firebase_auth: ^1.0.1
-  cloud_firestore: ^1.0.2
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.1
+  cloud_firestore: ^0.16.0+1
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
